--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 									<p>After the hackathon, I entered the idea for CashOut into a startup competition at my university with a new team at my side. Our team performed extensive market research, competetive analysis, and client searching to develop a business plan for our startup. We ended up finishing as runners up in the competition, but we're currently discussing the possibility of continuing to pursue the idea with help from an angel investor.</p>
 									
 									<div class="client-info">
-										<h2>Check It Out (Website Currently Unavailable)</h2>
-										<a target="_blank" href="http://cashtag.tech/">www.cashtag.tech</a>
+										<h2>Check It Out</h2>
+										<a target="_blank" href="https://d1bqtulbdbcodl.cloudfront.net/">www.cashtag.tech</a>
 									</div>
 								</div>
 								<div id="project-04" class="single-testimonial tab-pane fade in">
