add google analytics script, change two projects to MAYA projects, and replace images for projects

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         <![endif]-->
     </head>
     <body id="body">
+        <!-- Google Analytics Script -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-83067345-2', 'auto');
+            ga('send', 'pageview');
+        </script>
 
 		<div id="preloader">
 			<div class="spinner">
@@ -154,8 +164,13 @@
 							</div>
 							</strong>
 						</div>
-						<p>Additionally, I have experience using AWS, in particular EC2, S3, and Elastic Beanstalk.</p>
-						<p>In my free time, I also really enjoy travelling! I believe that experiencing other cultures and visiting new places is not only fun, but also incredibly important to view the world for what it truly is - an insanely complicated and diverse place.</p>
+						<p>Additionally, I have experience using AWS, in particular
+                            EC2, S3, and Elastic Beanstalk.</p>
+						<p>In my free time, I also really enjoy travelling! I
+                            believe that experiencing other cultures and visiting
+                            new places is not only fun, but also incredibly
+                            important to view the world for what it truly is -
+                            an insanely complicated and diverse place.</p>
 					</div>
 
 					<div class="col-md-6 wow animated fadeInUp">
@@ -170,7 +185,8 @@
 				<div class="row">
 					<div class="col-md-12 text-center wow animated fadeInUp">
 						<h1>Education</h1>
-						<h2 class="school-name"><img src="img/demo-images/pitt-logo.png" alt="" style="width:80px; height:70px; padding-right:20px;"/><strong>University of Pittsburgh - GPA 3.99</strong></h2>
+						<h2 class="school-name"><img src="img/demo-images/pitt-logo.png" alt=""
+                            style="width:80px; height:70px; padding-right:20px;"/><strong>University of Pittsburgh - GPA 3.99</strong></h2>
 					</div>
 				</div>
 				<div class="row">
@@ -178,21 +194,34 @@
 						<div class="features-item">
 							<span class="letter-grade"><strong>A</strong></span>
 							<h2>Intermediate Java Programming</h2>
-							<p>In this class I gained a fundamental understanding of object-oriented programming concepts and key ideas. The assignments and examples for the class were all in Java, the go-to programming language for computer science classes at my university.</p>
+							<p>In this class I gained a fundamental understanding
+                                of object-oriented programming concepts and key
+                                ideas. The assignments and examples for the class
+                                were all in Java, the go-to programming language
+                                for computer science classes at my university.</p>
 						</div>
 					</div><!--feature col end-->
 					<div class="col-md-4 col-sm-6">
 						<div class="features-item">
 							<span class="letter-grade"><strong>A</strong></span>
 							<h2>Data Structures</h2>
-							<p>The purpose of this class was to discuss the fundamental data structures in computer science as well as their most popular implementations in the Java programming language. Additionally, some algorithm analysis was touched on.</p>
+							<p>The purpose of this class was to discuss the fundamental
+                                data structures in computer science as well as
+                                their most popular implementations in the Java
+                                programming language. Additionally, some algorithm
+                                analysis was touched on.</p>
 						</div>
 					</div><!--feature col end-->
 					<div class="col-md-4 col-sm-6">
 						<div class="features-item">
 							<span class="letter-grade"><strong>A+</strong></span>
 							<h2>Discrete Structures</h2>
-							<p>In this class, we discussed a wide variety of topics in basic discrete mathematics and probability. In particular, we discussed how these topics pertain to the world of computer science. Some topics include logic, mathematical reasoning (proof strategies), relations, and counting.</p>
+							<p>In this class, we discussed a wide variety of
+                                topics in basic discrete mathematics and probability.
+                                In particular, we discussed how these topics pertain
+                                to the world of computer science. Some topics include
+                                logic, mathematical reasoning (proof strategies),
+                                relations, and counting.</p>
 						</div>
 					</div><!--feature col end-->
 				</div>
@@ -201,21 +230,35 @@
 						<div class="features-item">
 							<span class="letter-grade"><strong>A+</strong></span>
 							<h2>Differential Equations</h2>
-							<p>This class discussed primarily linear, first-order, and second-order differential equations. Solution techniques for both homogeneous and inhomogeneous differential equations were discussed. The application of Laplace transforms as a method of solving differential equations was discussed in detail.</p>
+							<p>This class discussed primarily linear, first-order,
+                                and second-order differential equations. Solution
+                                techniques for both homogeneous and inhomogeneous
+                                differential equations were discussed. The
+                                application of Laplace transforms as a method
+                                of solving differential equations was discussed
+                                in detail.</p>
 						</div>
 					</div><!--feature col end-->
 					<div class="col-md-4 col-sm-6">
 						<div class="features-item">
 							<span class="letter-grade"><strong>A</strong></span>
 							<h2>Computer Organization and Assembly Language</h2>
-							<p>This class presented a low-level view of a computer processor. We had many projects that were programmed in MIPS assembly language, and we spent a significant amount of time designing our own computer processor which could implement a simplified version of MIPS.</p>
+							<p>This class presented a low-level view of a computer
+                                processor. We had many projects that were programmed
+                                in MIPS assembly language, and we spent a significant
+                                amount of time designing our own computer processor
+                                which could implement a simplified version of MIPS.</p>
 						</div>
 					</div><!--feature col end-->
 					<div class="col-md-4 col-sm-6">
 						<div class="features-item">
 							<span class="letter-grade"><strong>A+</strong></span>
 							<h2>Calculus 3</h2>
-							<p>A typical calculus 3 course. Some topics that were discussed in detail include functions of several variables and their representations in space, partial derivatives and their applications, and multiple integrals and their applications.</p>
+							<p>A typical calculus 3 course. Some topics that were
+                                discussed in detail include functions of several
+                                variables and their representations in space,
+                                partial derivatives and their applications, and
+                                multiple integrals and their applications.</p>
 						</div>
 					</div><!--feature col end-->
 				</div>
@@ -227,8 +270,10 @@
 				<div class="row wow animated fadeInDown">
 					<div class="col-md-12 text-center hero-title">
 						<!--<i class="fa fa-cog fa-spin"></i>-->
-						<h2 class="page-title">Projects</h2>
-						<p>A collection of some of my favorite projects. These include projects I completed for school, projects I created at hackathons, projects I was hired to complete for my freelance work, and projects I just did in my free time.</p>
+						<h2 class="page-title">Experience</h2>
+						<p>A showcase of some of the projects I have worked on as
+                        a software engineering intern, freelance web developer,
+                        and computer science student.</p>
 					</div><!--hero title end-->
 				</div>
 
@@ -237,23 +282,23 @@
 						<div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
 
 							<ul class="clients-list" role="tablist">
-								<li class="active">
+                                <li class="active">
+									<a data-toggle="tab" href="#project-04"><img src="img/demo-images/projects/drilling.png" alt="" /></a>
+								</li>
+                                <li>
+									<a data-toggle="tab" href="#project-05"><img src="img/demo-images/projects/law.jpg" alt="" /></a>
+								</li>
+                                <li>
 									<a data-toggle="tab" href="#project-07"><img src="img/demo-images/projects/blog.jpg" alt="" /></a>
 								</li>
 								<li>
-									<a data-toggle="tab" href="#project-02"><img src="img/demo-images/projects/acuna.jpg" alt="" /></a>
+									<a data-toggle="tab" href="#project-02"><img src="img/demo-images/projects/acuna.png" alt="" /></a>
 								</li>
 								<li>
 									<a data-toggle="tab" href="#project-01"><img src="img/demo-images/projects/asl.gif" alt="" /></a>
 								</li>
 								<li>
-									<a data-toggle="tab" href="#project-03"><img src="img/demo-images/projects/cashtag.jpg" alt="" /></a>
-								</li>
-								<li>
-									<a data-toggle="tab" href="#project-04"><img src="img/demo-images/projects/light.png" alt="" /></a>
-								</li>
-								<li>
-									<a data-toggle="tab" href="#project-05"><img src="img/demo-images/projects/pong.png" alt="" /></a>
+									<a data-toggle="tab" href="#project-03"><img src="img/demo-images/projects/cashtag.gif" alt="" /></a>
 								</li>
 								<li>
 									<a data-toggle="tab" href="#project-06"><img src="img/demo-images/projects/space.png" alt="" /></a>
@@ -299,24 +344,46 @@
 										<a target="_blank" href="https://d1bqtulbdbcodl.cloudfront.net/">www.cashtag.tech</a>
 									</div>
 								</div>
-								<div id="project-04" class="single-testimonial tab-pane fade in">
-									<h2>AutoLight</h2>
-									<p>This is a project that was completed by my team at PittApps 2016 and won the award for Best Energy-Related Hack. In this project, we utilized an arduino, a small servo motor, and an infrared sensor to create a device which turns lights on and off as the user enters/leaves a room. We designed an arm that could attach to the servo motor in OpenSCAD and used a 3D printer to make it.</p>
-                            		<p>Although similar technologies already exist, they are expensive to manufacture and can be difficult to implement for the average person with little technical skill. The idea of this hack was to improve the availability of energy-saving technology for the average person.</p>
+								<div id="project-04" class="single-testimonial tab-pane fade in active">
+									<h2>Offshore Drilling Co. Web Dashboard</h2>
+									<p>
+                                        I was one of two lead developers on this project while working as a software engineering intern at MAYA Design.
+                                        We worked with a large offshore drilling company to produce a web dashboard that would function as a tool for
+                                        rig managers and other employees to view and analyze data and metrics about their rigs.
+                                    </p>
+                            		<p>
+                                        The site is a Flask application that connects to a SQL Server database. The front-end has a wide variety of
+                                        complex, custom data visualizations I created using the JavaScript library d3.js. I wrote a blog post about
+                                        the project, which goes into depth about some of the difficulties I experienced and some of the data
+                                        visualizations. Link below.
+                                    </p>
 
 									<div class="client-info">
 										<h2>Check It Out</h2>
-										<a target="_blank" href="http://devpost.com/software/autolight">AutoLight Devpost</a>
+										<a target="_blank" href="http://solomon-blog.com/posts/internship-2016-part-2">Blog Post About Project</a>
 									</div>
 								</div>
 								<div id="project-05" class="single-testimonial tab-pane fade in">
-									<h2>Pong Clone</h2>
-									<p>This is a small project I completed using JavaScript during my spare time. I wanted to see if I could create a simple game using only JavaScript and Pong is a game I have always enjoyed.</p>
-									<p>Please note that much of the code for the game was created with help from a guide, and this is something I created when I first began learning to program. A notable feature that I added outside of the guide was the score-keeping.</p>
+									<h2>Emergency Law Inventory</h2>
+									<p>
+                                        I was the primary developer for this project while working at MAYA Design as a software engineering intern.
+                                        The Emergency Law Inventory (ELI) is a website where medical reserve corps emergency respondents can go
+                                        if they are being deployed to another state which has different liability and scope of practice laws for their
+                                        profession. The website prompts the user for their profession, location, and scenario (state of emergency or not)
+                                        and then displays emergency-related laws from a database that have been translated into layman's terms by
+                                        members of the Pitt law school.
+                                    </p>
+									<p>
+                                        The website runs on a primarily jQuery driven front-end with a PHP backend that uses a content management
+                                        system called Kirby, the same CMS I used to make my personal blog. It connects to a PostgreSQL database that
+                                        I built from scratch with a Python script that hits the Google Drive API to collect data from a form the Pitt law
+                                        school had been filling out for data input. I later built an extension of the website that acts as a portal for
+                                        the law school to edit, add, and remove laws in the future.
+                                    </p>
 
 									<div class="client-info">
-										<h2>Check It Out</h2>
-										<a target="_blank" href="pong/index.html">Play Pong</a>
+										<h2>Website Not Public Yet</h2>
+                                        <a href="http://solomon-blog.com/posts/internship-2016" target="_blank">Blog Post About Project</a>
 									</div>
 								</div>
 								<div id="project-06" class="single-testimonial tab-pane fade in">
@@ -329,7 +396,7 @@
 										<a target="_blank" href="https://github.com/solastley/Bug-Buster">Bug Buster Repository</a>
 									</div>
 								</div>
-								<div id="project-07" class="single-testimonial tab-pane fade in active">
+								<div id="project-07" class="single-testimonial tab-pane fade in">
 									<h2>PHP Blog</h2>
 									<p>I created a personal blog using the Kirby CMS and PHP. Kirby is a database-less CMS
 									that uses folders for content management and organization. I actually have a meta-blog
@@ -490,8 +557,6 @@
 		<script src="js/jquery.easing.1.3.min.js" type="text/javascript"></script>
 		<script src="js/jquery.sticky.js" type="text/javascript"></script>
 		<script src="js/jquery.nav.js" type="text/javascript"></script>
-		<!--owl carousel-->
-		<script src="includes/owl-carousel/owl.carousel.min.js" type="text/javascript"></script>
 		<!--wow animation-->
 		<script src="includes/wow-js/wow.min.js" type="text/javascript"></script>
 
@@ -510,17 +575,11 @@
 			<script type="text/javascript" src="js/ie-opacity-polyfill.js"></script>
 		<![endif]-->
 
-
-		<!--parallax-->
-		<!--<script src="js/jquery.scrolly.js" type="text/javascript"></script>-->
 		<!--portfolio-filter-->
 		<script src="js/isotope.pkgd.min.js" type="text/javascript"></script>
 		<!--lightbox-->
 		<script src="includes/litebox/images-loaded.min.js" type="text/javascript"></script>
 		<script src="includes/litebox/litebox.min.js" type="text/javascript"></script>
-		<!--project count-->
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-		<script src="js/jquery.counterup.min.js" type="text/javascript"></script>
 		<!--custom scrollbar-->
 		<script src="js/jquery.nicescroll.min.js" type="text/javascript"></script>
 		<!--Contact Form-->
