remove christina acuna profile from projects and add git widget

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 									<a data-toggle="tab" href="#project-07"><img src="img/demo-images/projects/blog.jpg" alt="" /></a>
 								</li>
 								<li>
-									<a data-toggle="tab" href="#project-02"><img src="img/demo-images/projects/acuna.png" alt="" /></a>
+									<a data-toggle="tab" href="#project-02"><img src="img/demo-images/projects/git.png" alt="" /></a>
 								</li>
 								<li>
 									<a data-toggle="tab" href="#project-01"><img src="img/demo-images/projects/asl.gif" alt="" /></a>
@@ -325,13 +325,16 @@
 									</div>
 								</div>
 								<div id="project-02" class="single-testimonial tab-pane fade in">
-									<h2>Christina Acuna Castillo Profile</h2>
-									<p>This is a website I was commissioned to create by Christina Acuna, an aspiring digital graphic artist, photographer, and poet. Christina asked me to create a simple, pastel themed website for her where she could showcase some examples of her work.</p>
-									<p>Although Christina ended up changing quite a lot of my original design, the website is a great example of my ability to mould the design, structure, and function of a site for my client's needs.</p>
+									<h2>Kirby CMS Git Widget</h2>
+									<p>While an intern at MAYA Design during the summer of 2016, I developed a custom widget 
+									for the Kirby CMS dashboard. Instructions for installation can be found on my 
+									<a href="http://www.solomon-blog.com/posts/kirby-cms-git-widget" target="_blank">blog</a>.</p>
+									<p>MAYA's website utilizes a PHP based content management system called Kirby. This CMS 
+									provides a UI to edit content from the browser, which many of the employees use. This custom widget automatically attempts to do an update of the git repository for the website when content changes in the panel, and then facilitates the resolution of any merge conflicts if they occur. This may happen if, for example, separate servers are used by developers on the site and employees at the company who are editing content.</p>
 
 									<div class="client-info">
 										<h2>Check It Out</h2>
-										<a target="_blank" href="http://www.cac-art.com">www.cac-art.com</a>
+										<a target="_blank" href="http://www.solomon-blog.com/posts/kirby-cms-git-widget">Blog Post</a>
 									</div>
 								</div>
 								<div id="project-03" class="single-testimonial tab-pane fade in">
